--- a/restaurant.html
+++ b/restaurant.html
@@ -2,51 +2,86 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="description" content="Restaurant Review">
-    <meta name="author" content="Faith Salawe">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/media.css">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin="" />
-    <title>Restaurant Reviews</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Normalize.css for better cross-browser consistency -->
+  <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
+  <!-- Main CSS file -->
+  <link rel="stylesheet" href="css/styles.css" type="text/css">
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
+  <title>Restaurant Info</title>
+  <style>
+    .leaflet-container a{
+      color: #005475;
+    }
+    .leaflet-container .leaflet-control-attribution{
+      background: white;
+    }
+  </style>
 </head>
 
-<body class="container">
-    <header class="header-grid">
-        <nav>
-            <!--***** Switch comments in code to run page on local servel OR on github *****-->
-            <!-- <h1><a href="/">Restaurant Reviews</a></h1> -->
-            <h1><a href="/restaurant-reviews-app-stage-1/">Restaurant Reviews</a></h1>
-        </nav>
-    </header>
-    <main id="maincontent" class="main-grid">
-        <section id="map-container"  tabindex="-1">
-            <div id="map" role="application"></div>
-        </section>
-        <section>
-            <div class="filter-options">
-                <h2>Filter Results</h2>
-                <select id="neighborhoods-select" aria-label="select restaurant neighborhood" name="neighborhoods" onchange="updateRestaurants()">
-                    <option value="all">All Neighborhoods</option>
-                </select>
-                <select id="cuisines-select" aria-label="select cuisine preference" name="cuisines" onchange="updateRestaurants()">
-                    <option value="all">All Cuisines</option>
-                </select>
-            </div>
-            <ul id="restaurants-list"></ul>
-        </section>
-    </main>
-    <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
-    <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
-    <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
-    <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY&libraries=places&callback=initMap"></script> -->
-    <footer id="footer" class="footer-grid">
-        <!--***** Switch comments in code to run page on local servel OR on github *****-->
-        <!-- Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved. -->
-        Copyright (c) 2017 <a href="/restaurant-reviews-app-stage-1/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
-    </footer>
+<body class="inside">
+  <!-- Beginning header -->
+  <header>
+    <!-- Beginning nav -->
+    <nav>
+      <h1><a href="./">Restaurant Reviews</a></h1>
+    </nav>
+    <!-- Beginning breadcrumb -->
+    <nav aria-label="Breadcrumb" class="breadcrumb">
+      <ul id="breadcrumb" >
+        <li><a href="./">Home</a></li>
+      </ul>
+    </nav>
+    <!-- End breadcrumb -->
+    <!-- End nav -->
+  </header>
+  <!-- End header -->
+
+  <!-- Beginning main -->
+  <main id="maincontent" class="container">
+    <!-- Beginning map -->
+    <section id="map-container" class="box">
+      <div id="map" role="application" aria-label="Restaurant location" aria-describedby="map-help"></div>
+      <div id="map-help" hidden>Map showing the Restaurant's location</div>
+    </section>
+    <!-- End map -->
+    <!-- Beginning restaurant -->
+    <div class="container" id="container-2">
+      <section id="restaurant-container" class="box">
+        <h2 id="restaurant-name" tabindex="0"></h2>
+        <img id="restaurant-img" tabindex="0">
+        <p id="restaurant-cuisine"></p>
+        <p id="restaurant-address"></p>
+        <table id="restaurant-hours" tabindex="0"></table>
+      </section>
+      <!-- end restaurant -->
+      <!-- Beginning reviews -->
+      <section id="reviews-container" class="box">
+        <ul id="reviews-list" tabindex="0"></ul>
+      </section>
+    </div>
+    <!-- End reviews -->
+  </main>
+  <!-- End main -->
+
+  <!-- Beginning footer -->
+  <footer id="footer">
+    Copyright (c) 2017 <a href="./"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
+  </footer>
+  <!-- End footer -->
+  <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
+  <!-- Beginning scripts -->
+  <!-- Database helpers -->
+  <script src="js/dbhelper.js"></script>
+  <!-- Main javascript file -->
+  <script src="js/restaurant_info.js"></script>
+  <script async src="js/indexController.js"></script>
+  <!-- Google Maps -->
+ <!--  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_tKbW6A5pQ-eupxI56myUnHLqYCzOjKo&libraries=places&callback=initMap"></script> -->
+  <!-- End scripts -->
+
 </body>
 
 </html>
