--- a/index.html
+++ b/index.html
@@ -2,57 +2,68 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" 
-      integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
-  <title>Restaurant Reviews</title>
+    <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css"/>
+    <link rel="stylesheet" href="css/styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+    <title>Restaurant Reviews</title>
 </head>
 
 <body>
-  <header>
+<header>
     <nav>
-      <h1>
-        <a href="/">Restaurant Reviews</a>
-      </h1>
+        <h1><a tabindex="-1" href="/">Restaurant Reviews</a></h1>
     </nav>
-  </header>
+</header>
 
-  <main id="maincontent">
-    
-    <section id="map-container" aria-labelledby="map-aria-description" role="application">
-      <div id="map"></div>
+
+<!--Main Content-->
+<main id="maincontent">
+
+
+    <!--Map-->
+    <section tabindex="-1" id="map-container">
+        <div id="map" role="application"></div>
     </section>
-    
-    <label id="map-aria-description" class="map-aria-description">Mapbox map application</label>
-    <section>
-      <div class="filter-options">
-        <h2>Filter Results</h2>
-        <div class="filter-selects">
-          <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()" aria-labelledby="neighborhoods-label">
-            <option value="all">All Neighborhoods</option>
-          </select>
-          <label id="neighborhoods-label" class="filter-label">by neighborhoods</label>
-          <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()" aria-labelledby="cuisines-label">
-            <option value="all">All Cuisines</option>
-          </select>
-          <label id="cuisines-label" class="filter-label">by cuisines</label>
+
+
+    <!--Filters-->
+    <section style="width: 100%;">
+        <!--Filter options-->
+        <div class="filter-options">
+            <h2>Filter Results</h2>
+
+            <!--Neighborhoods-->
+            <select tabindex="1" id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()" aria-label="select">
+                <option value="all">All Neighborhoods</option>
+            </select>
+
+            <!--cuisines-->
+            <select tabindex="2" id="cuisines-select" name="cuisines" onchange="updateRestaurants()" aria-label="select">
+                <option value="all">All Cuisines</option>
+            </select>
         </div>
-      </div>
-      <ul id="restaurants-list"></ul>
+
+
+        <!--Results-->
+        <ul tabindex="-1" id="restaurants-list"></ul>
     </section>
-  
-  </main>
-  <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
-  <script type="application/javascript" charset="utf-8" src="./js/dbhelper.js"></script>
-  <script type="application/javascript" charset="utf-8" src="./js/sw_registration.js"></script>
-  <script type="application/javascript" charset="utf-8" src="./js/main.js"></script>
-  
-  <footer id="footer">
-    Copyright (c) 2018 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
-  </footer>
+</main>
+
+<script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
+<script type="application/javascript" charset="utf-8" src="js/main.js"></script>
+
+
+<!--For Google Maps-->
+<script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDovPjMwxQS535OlQ30Za_KBOdrKu47DTU&libraries=places&callback=initMap"></script>
+
+
+<!--Footer-->
+<footer id="footer">
+    Copyright (c) 2017 <a tabindex="4" href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
+</footer>
 
 </body>
 
