--- a/index.html
+++ b/index.html
@@ -2,68 +2,74 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css"/>
-    <link rel="stylesheet" href="css/styles.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-
-    <title>Restaurant Reviews</title>
+  <!-- Meta tags -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="Description" content="Udacity FEND Project #6 Restaurant Review App">
+  <meta name="author" content="koszojudit">
+  <!-- Normalize.css for better cross-browser consistency -->
+  <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
+  <!-- Main CSS file -->
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/responsive.css">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Lato|Merriweather" rel="stylesheet">
+  <!-- Open-source JavaScript library for mobile-friendly interactive maps -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
+  <!-- Page title -->
+  <title>JK's Restaurant Reviews App</title>
 </head>
 
-<body>
-<header>
-    <nav>
-        <h1><a tabindex="-1" href="/">Restaurant Reviews</a></h1>
-    </nav>
-</header>
+<body class="home">
+
+  <header>
+
+    <nav class="wrapper">
+      <div class="logo" role="banner" tabindex="0">
+        <a href="./">
+          <h1>Restaurant Reviews</h1>
+        </a>
+      </div>
 
 
-<!--Main Content-->
-<main id="maincontent">
+      <div class="filter-options" tabindex="0">
+        <h2>Filter by:</h2>
 
+        <select aria-label="Selected neighborhood" id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()" tabindex="0">
+          <option value="all">All Neighborhoods</option>
+        </select>
 
-    <!--Map-->
-    <section tabindex="-1" id="map-container">
-        <div id="map" role="application"></div>
+        <select aria-label="Selected cuisine" id="cuisines-select" name="cuisines" onchange="updateRestaurants()" tabindex="0">
+          <option value="all">All Cuisines</option>
+        </select>
+      </nav>
+    </div>
+  </header>
+
+  <main class="main-content">
+
+    <section id="map-container" tabindex="-1">
+      <div id="map" aria-label="Locations" role="application"></div>
     </section>
 
-
-    <!--Filters-->
-    <section style="width: 100%;">
-        <!--Filter options-->
-        <div class="filter-options">
-            <h2>Filter Results</h2>
-
-            <!--Neighborhoods-->
-            <select tabindex="1" id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()" aria-label="select">
-                <option value="all">All Neighborhoods</option>
-            </select>
-
-            <!--cuisines-->
-            <select tabindex="2" id="cuisines-select" name="cuisines" onchange="updateRestaurants()" aria-label="select">
-                <option value="all">All Cuisines</option>
-            </select>
-        </div>
-
-
-        <!--Results-->
-        <ul tabindex="-1" id="restaurants-list"></ul>
+    <section>
+      <ul id="restaurants-list" tabindex="0" aria-label="Restaurant list"></ul>
     </section>
-</main>
 
-<script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
-<script type="application/javascript" charset="utf-8" src="js/main.js"></script>
+  </main>
 
-
-<!--For Google Maps-->
-<script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDovPjMwxQS535OlQ30Za_KBOdrKu47DTU&libraries=places&callback=initMap"></script>
+  <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
+  <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
+  <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
+  <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY&libraries=places&callback=initMap"></script> -->
 
 
-<!--Footer-->
-<footer id="footer">
-    Copyright (c) 2017 <a tabindex="4" href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
-</footer>
+  <footer id="footer" tabindex="0">
+    <div class="wrapper">
+      Copyright (c) 2018  <a href="/"><strong>Restaurant Reviews</strong></a>  All Rights Reserved.
+    </div>
+  </footer>
 
 </body>
 
