--- a/restaurant.html
+++ b/restaurant.html
@@ -2,77 +2,87 @@
 <html lang="en">
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Normalize.css for better cross-browser consistency -->
-    <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css"/>
-    <!-- Main CSS file -->
-    <link rel="stylesheet" href="css/styles.css" type="text/css">
-    <title>Restaurant Info</title>
+  <!-- Meta tags -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="Description" content="Udacity FEND Project #6 Restaurant Review App">
+  <meta name="author" content="koszojudit">
+  <!-- Normalize.css for better cross-browser consistency -->
+  <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
+  <!-- Main CSS file -->
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/responsive.css">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Lato|Merriweather" rel="stylesheet">
+  <!-- Open-source JavaScript library for mobile-friendly interactive maps -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
+  <!-- Page title -->
+  <title>Restaurant Info</title>
 </head>
 
 <body class="inside">
-<!-- Beginning header -->
-<header>
-    <!-- Beginning nav -->
-    <nav>
-        <h1><a href="/">Restaurant Reviews</a></h1>
-        <!-- Beginning breadcrumb -->
-        <ul id="breadcrumb" aria-label="breadcrumb">
-            <li><a href="/">Home</a></li>
-        </ul>
-        <!-- End breadcrumb -->
+
+  <!-- Header -->
+  <header>
+
+    <nav class="wrapper">
+      <div class="back" role="banner" tabindex="0">
+        <a href="./">
+          <h1> < Back</h1>
+        </a>
+      </div>
     </nav>
 
-    <!-- End nav -->
-</header>
-<!-- End header -->
+  </header>
 
-<!-- Beginning main -->
-<main id="maincontent">
+  <!-- Main content -->
+  <main id="maincontent">
 
-    <!-- Beginning map -->
-    <section id="map-container">
-        <div id="map" role="application"></div>
-    </section>
-    <!-- End map -->
-
-
-    <!-- Beginning restaurant -->
+    <!-- Restaurant info -->
     <section id="restaurant-container">
 
-        <h2 id="restaurant-name"></h2>
+      <div class="restaurant-header">
+        <h1 id="restaurant-name" tabindex="0"></h1>
+        <p id="restaurant-neighborhood" tabindex="0" aria-label="Neighborhood"></p>
+        <p id="restaurant-address" tabindex="0" aria-label="Address"></p>
+        <span id="restaurant-rating" tabindex="0" aria-label="Rating"></span>
+        <span id="restaurant-cuisine" tabindex="0" aria-label="Cuisine"></span>
+      </div>
 
-        <img id="restaurant-img">
-        <p id="restaurant-cuisine"></p>
-        <p id="restaurant-address"></p>
+      <img id="restaurant-img" tabindex="-1" role="image">
+
+      <div class="open-hours" tabindex="0">
+        <h2>Open hours</h2>
+        <hr>
         <table id="restaurant-hours"></table>
-    </section>
-    <!-- end restaurant -->
+      </div>
 
-    <!-- Beginning reviews -->
+    </section>
+
+    <!-- Reviews -->
     <section id="reviews-container">
-        <ul id="reviews-list"></ul>
+      <ul id="reviews-list"></ul>
     </section>
-    <!-- End reviews -->
 
-</main>
-<!-- End main -->
+    <!-- Map -->
+    <section id="map-container" tabindex="-1" role="application" aria-disabled="true">
+      <div id="map"></div>
+    </section>
 
-<!-- Beginning footer -->
-<footer id="footer">
-    Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
-</footer>
-<!-- End footer -->
+  </main>
 
-<!-- Beginning scripts -->
-<!-- Database helpers -->
-<script type="text/javascript" src="js/dbhelper.js"></script>
-<!-- Main javascript file -->
-<script type="text/javascript" src="js/restaurant_info.js"></script>
-<!-- Google Maps -->
-<script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDovPjMwxQS535OlQ30Za_KBOdrKu47DTU&libraries=places&callback=initMap"></script>
-<!-- End scripts -->
+  <!-- Footer -->
+  <footer id="footer" tabindex="0">
+    <div class="wrapper">
+      Copyright (c) 2018  <a href="./"><strong>Restaurant Reviews</strong></a>  All Rights Reserved.
+    </div>
+  </footer>
+
+  <!-- Scripts -->
+  <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
+  <script type="text/javascript" src="js/dbhelper.js"></script>
+  <script type="text/javascript" src="js/restaurant_info.js"></script>
 
 </body>
 
