--- a/restaurant.html
+++ b/restaurant.html
@@ -2,87 +2,108 @@
 <html lang="en">
 
 <head>
-  <!-- Meta tags -->
-  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="Description" content="Udacity FEND Project #6 Restaurant Review App">
-  <meta name="author" content="koszojudit">
-  <!-- Normalize.css for better cross-browser consistency -->
-  <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
-  <!-- Main CSS file -->
+  <meta name="theme-color" content="#ffffff">
+  <meta name="Description" content="Restaurant Details">
+  <link rel="icon" href="./img/favicon.png">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Barlow+Condensed:300,400,500,600">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:600">
+  <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/responsive.css">
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Lato|Merriweather" rel="stylesheet">
-  <!-- Open-source JavaScript library for mobile-friendly interactive maps -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
-  <!-- Page title -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin="">
   <title>Restaurant Info</title>
 </head>
 
 <body class="inside">
-
-  <!-- Header -->
+  <!-- Beginning header -->
   <header>
-
-    <nav class="wrapper">
-      <div class="back" role="banner" tabindex="0">
+    <!-- Beginning nav -->
+    <nav>
+      <div class="logo" role="banner">
+        <!-- <a href="/restaurant-review-app/"> -->
         <a href="./">
-          <h1> < Back</h1>
+          <h1>Restaurant Reviews</h1>
         </a>
       </div>
     </nav>
+    <!-- End nav -->
 
+    <!-- Beginning breadcrumb -->
+    <div class="breadcrumbs wrapper" role="navigation">
+      <ul id="breadcrumb">
+        <li><a href="/">Home</a></li>
+      </ul>
+    </div>
+    <!-- End breadcrumb -->
   </header>
+  <!-- End header -->
 
-  <!-- Main content -->
+  <!-- Beginning main -->
   <main id="maincontent">
 
-    <!-- Restaurant info -->
-    <section id="restaurant-container">
 
+    <!-- Beginning restaurant -->
+    <section id="restaurant-container" class="wrapper">
       <div class="restaurant-header">
         <h1 id="restaurant-name" tabindex="0"></h1>
-        <p id="restaurant-neighborhood" tabindex="0" aria-label="Neighborhood"></p>
-        <p id="restaurant-address" tabindex="0" aria-label="Address"></p>
-        <span id="restaurant-rating" tabindex="0" aria-label="Rating"></span>
-        <span id="restaurant-cuisine" tabindex="0" aria-label="Cuisine"></span>
+        <span class="rating" tabindex="0"></span>
       </div>
-
-      <img id="restaurant-img" tabindex="-1" role="image">
+      <div class="restaurant-info">
+        <div id="restaurant-img" tabindex="0" role="img">
+        </div>
+        <div class="restaurant-details">
+          <h2>Location</h2>
+          <p id="restaurant-location" tabindex="-1" aria-disabled="true"></p>
+          <p id="restaurant-address" tabindex="0"></p>
+          <hr>
+          <h2>Cuisine Type</h2>
+          <p id="restaurant-cuisine" class="cuisine-type" tabindex="0"></p>
+        </div>
+      </div>
 
       <div class="open-hours" tabindex="0">
         <h2>Open hours</h2>
         <hr>
         <table id="restaurant-hours"></table>
       </div>
-
     </section>
+    <!-- end restaurant -->
 
-    <!-- Reviews -->
-    <section id="reviews-container">
-      <ul id="reviews-list"></ul>
+    <!-- Beginning reviews -->
+    <section id="reviews-container" class="wrapper">
+      <div class="reviews">
+        <h2 tabindex="0">Reviews</h2>
+        <hr>
+        <ul id="reviews-list" tabindex="0"></ul>
+      </div>
     </section>
+    <!-- End reviews -->
 
-    <!-- Map -->
+    <!-- Beginning map -->
     <section id="map-container" tabindex="-1" role="application" aria-disabled="true">
       <div id="map"></div>
     </section>
+    <!-- End map -->
+
 
   </main>
+  <!-- End main -->
 
-  <!-- Footer -->
-  <footer id="footer" tabindex="0">
-    <div class="wrapper">
-      Copyright (c) 2018  <a href="./"><strong>Restaurant Reviews</strong></a>  All Rights Reserved.
-    </div>
+  <!-- Beginning footer -->
+  <footer id="footer" class="wrapper">
+    Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
   </footer>
-
-  <!-- Scripts -->
+  <!-- End footer -->
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
-  <script type="text/javascript" src="js/dbhelper.js"></script>
-  <script type="text/javascript" src="js/restaurant_info.js"></script>
+  <!-- Beginning scripts -->
+  <!-- Database helpers -->
+  <script src="js/dbhelper.js"></script>
+  <!-- Main javascript file -->
+  <script src="js/restaurant_info.js"></script>
+  <!-- End scripts -->
+
 
 </body>
 
